# Qlocky.Ui

./: .clang-format  .env-default  .gitignore  CMakeLists.txt  LICENSE  qlocky.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cpp  mainwindow.qml
tests/: CMakeLists.txt  demo.cpp
tools/CMake/: generate_vscode_files.cmake  source_collector.py  toolchain_host_x64.cmake  toolchain_target_sdk.cmake
